@@ -48,8 +48,7 @@ greeter_query (const gchar *msg)
 
 
 static void
-greeter_reboot_handler (GreeterItemInfo *info,
-			gpointer         user_data)
+greeter_reboot_handler (void)
 {
 	if (greeter_query (_("Are you sure you want to reboot the machine?"))) {
 		closelog();
@@ -60,8 +59,7 @@ greeter_reboot_handler (GreeterItemInfo *info,
 
 
 static void
-greeter_halt_handler (GreeterItemInfo *info,
-		      gpointer         user_data)
+greeter_halt_handler (void)
 {
 	if (greeter_query (_("Are you sure you want to shut down the machine?"))) {
 		closelog();
@@ -71,8 +69,7 @@ greeter_halt_handler (GreeterItemInfo *info,
 }
 
 static void
-greeter_suspend_handler (GreeterItemInfo *info,
-			 gpointer         user_data)
+greeter_suspend_handler (void)
 {
 	if (greeter_query (_("Are you sure you want to suspend the machine?"))) {
 		closelog();
@@ -81,17 +78,86 @@ greeter_suspend_handler (GreeterItemInfo *info,
 	}
 }
 
+static void
+greeter_system_handler (GreeterItemInfo *info,
+			gpointer         user_data)
+{
+  GtkWidget *dialog;
+  GtkWidget *halt_radio;
+  GtkWidget *suspend_radio;
+  GtkWidget *reboot_radio;
+  int ret;
+  GSList *radio_group = NULL;
+
+  dialog = gtk_dialog_new ();
+
+  halt_radio = gtk_radio_button_new_with_mnemonic (NULL,
+						   _("Shut down the computer"));
+  gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox),
+		      halt_radio,
+		      FALSE, FALSE, 4);
+  gtk_widget_show (halt_radio);
+
+  radio_group = gtk_radio_button_get_group (GTK_RADIO_BUTTON (halt_radio));
+  suspend_radio = gtk_radio_button_new_with_mnemonic (radio_group,
+						      _("Suspend the computer"));
+  gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox),
+		      suspend_radio,
+		      FALSE, FALSE, 4);
+  gtk_widget_show (suspend_radio);
+  
+  radio_group = gtk_radio_button_get_group (GTK_RADIO_BUTTON (halt_radio));
+  reboot_radio = gtk_radio_button_new_with_mnemonic (radio_group,
+						     _("Reboot the computer"));
+  gtk_box_pack_start (GTK_BOX (GTK_DIALOG (dialog)->vbox),
+		      reboot_radio,
+		      FALSE, FALSE, 4);
+  gtk_widget_show (reboot_radio);
+  
+  gtk_dialog_add_button (GTK_DIALOG (dialog),
+			 GTK_STOCK_CANCEL,
+			 GTK_RESPONSE_CANCEL);
+
+  gtk_dialog_add_button (GTK_DIALOG (dialog),
+			 GTK_STOCK_OK,
+			 GTK_RESPONSE_OK);
+  
+  gdm_wm_center_window (GTK_WINDOW (dialog));
+
+  gdm_wm_no_login_focus_push ();
+  ret = gtk_dialog_run (GTK_DIALOG (dialog));
+  gdm_wm_no_login_focus_pop ();
+  
+  if (ret == GTK_RESPONSE_CANCEL)
+    {
+      gtk_widget_destroy (dialog);
+      return;
+    }
+
+  if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (halt_radio)))
+    greeter_halt_handler();
+  else if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (reboot_radio)))
+    greeter_reboot_handler ();
+  else if (gtk_toggle_button_get_active (GTK_TOGGLE_BUTTON (suspend_radio)))
+    greeter_suspend_handler ();
+
+  gtk_widget_destroy (dialog);
+}
+
+
 void
 greeter_item_system_setup (void)
 {
   greeter_item_register_action_callback ("reboot_button",
-					 greeter_reboot_handler,
+					 (ActionFunc)greeter_reboot_handler,
 					 NULL);
   greeter_item_register_action_callback ("halt_button",
-					 greeter_halt_handler,
+					 (ActionFunc)greeter_halt_handler,
 					 NULL);
   greeter_item_register_action_callback ("suspend_button",
-					 greeter_suspend_handler,
+					 (ActionFunc)greeter_suspend_handler,
 					 NULL);
-
+  greeter_item_register_action_callback ("system_button",
+					 (ActionFunc)greeter_system_handler,
+					 NULL);
 }
