@@ -1,5 +1,11 @@
 2002-02-04  Alex Larsson  <alexl@redhat.com>
 
+	* gui/greeter/greeter_system.c:
+	Add system_button which is a dialog with all
+	shutdown options in it.
+	
+2002-02-04  Alex Larsson  <alexl@redhat.com>
+
 	* gui/greeter/Makefile.am:
 	Add greeter_system.[ch].
 
